fix colors and alignment

--- a/src/components/TimeTravel/timetravel.module.css
+++ b/src/components/TimeTravel/timetravel.module.css
@@ -1,7 +1,7 @@
 .timetravel button {
   border: none;
-  padding: 0 16px;
-  background: #444;
+  padding: 10px 16px;
+  background: #333;
   color: #ccc;
 }
 
@@ -12,7 +12,7 @@
 
 .timetravel button:disabled {
   color: #666;
-  background: #111;
+  background: #222;
   cursor: not-allowed;
 }
 
