--- a/src/components/Toggle/toggle.module.css
+++ b/src/components/Toggle/toggle.module.css
@@ -1,7 +1,7 @@
 .toggle {
   border: none;
-  padding: 0 16px;
-  background: #444;
+  padding: 10px 16px;
+  background: #333;
   color: #ccc;
   border-radius: 4px;
 }
